FIx navigation alignment

--- a/ACTFoundation.Web/assets/css/style.css
+++ b/ACTFoundation.Web/assets/css/style.css
@@ -897,6 +897,7 @@ nav {
   align-items: center;
   padding: calc(var(--default-spacing) / 2) var(--default-spacing);
   width: 100%;
+  justify-content: space-between;
 }
 nav a {
   margin-bottom: 1rem;
@@ -1357,7 +1358,7 @@ nav button {
 }
 
 .articles-list-item {
-  background: #FFFFFF;
+  background: #ffffff;
   border: 0.5px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
@@ -1398,10 +1399,10 @@ nav button {
     display: flex;
     width: 1280px;
     margin: 0 auto;
-  } 
+  }
 
-	.article-sidebar {
-	margin-top: 10px;
-	padding: 94px 78px;
-	}
+  .article-sidebar {
+    margin-top: 10px;
+    padding: 94px 78px;
+  }
 }
